mesa (22.2.3-2) UNRELEASED; urgency=medium

  * rules: Enable building lima drivers on riscv64. (LP: #1995137)

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 09 Nov 2022 19:55:50 +0200

mesa (22.2.3-1) unstable; urgency=medium

  * New upstream release. (Closes: #1022730)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Nov 2022 12:17:23 +0200

mesa (22.2.2-1) unstable; urgency=medium

  * control: Bump build-depends on wayland-protocols. (Closes: #1021666)
  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 21 Oct 2022 10:17:18 +0300

mesa (22.2.1-1) unstable; urgency=medium

  [ Zhang Boyang ]
  * control, rules: Re-enable LLVM support on riscv64. (LP: #1980386)

  [ Timo Aaltonen ]
  * control: Bump build-dep on directx-headers-dev.
  * New upstream release.
  * control, rules: Migrate to llvm-15.
  * control: Add riscv64 to mesa-vulkan-drivers archs.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 12 Oct 2022 11:48:24 +0300

mesa (22.2.0-1) unstable; urgency=medium

  * New upstream release.
  * nv50-ir-fix-OP_UNION-resolving-when-used-for-vector.diff: Dropped,
    upstream.
  * rules: Enable svga (vmwgfx) for armhf/arm64. (LP: #1989830)
  * control: Drop x32 from mesa-vulkan-drivers archs. (Closes: #1020386)

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 21 Sep 2022 12:57:22 +0300

mesa (22.2.0~rc3-2) unstable; urgency=medium

  * nv50-ir-fix-OP_UNION-resolving-when-used-for-vector.diff: Fix a
    regression on nouveau. (Closes: #1017499)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 20 Sep 2022 13:25:59 +0300

mesa (22.2.0~rc3-1) unstable; urgency=medium

  * New upstream release candidate.
  * rules: Enable video codecs. (Closes: #1016687)
  * control: Add python3 to mesa-vulkan-drivers depends.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 22 Aug 2022 13:28:16 +0300

mesa (22.2.0~rc2-1) unstable; urgency=medium

  * New upstream release candidate. (Closes: #1016801)
