@@ -62,8 +62,14 @@ else
 
   # radv/lavapipe needs LLVM and the Vulkan loader, so only build on the subset of
   # arches where we have LLVM enabled and where the Vulkan loader is built.
-  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el riscv64 s390x sparc64))
+  ifneq (,$(filter $(DEB_HOST_ARCH), amd64 arm64 armel armhf i386 mips64el mipsel powerpc ppc64 ppc64el s390x sparc64))
 	VULKAN_DRIVERS += amd swrast
+  endif
+
+  # Only enable amd on riscv64, swrast needs CPU JIT support which doesn't work properly yet
+  ifneq (,$(filter $(DEB_HOST_ARCH), riscv64))
+	VULKAN_DRIVERS += amd
+	confflags_GALLIUM += -Ddraw-use-llvm=false
   endif
 
   ifeq ($(DEB_HOST_ARCH_OS), linux)
