@@ -1,6 +1,7 @@
 mesa (22.2.3-2) UNRELEASED; urgency=medium
 
   * rules: Enable building lima drivers on riscv64. (LP: #1995137)
+  * rules: Disable building llvmpipe on riscv64. (Closes: #1004039)
 
  -- Timo Aaltonen <tjaalton@debian.org>  Wed, 09 Nov 2022 19:55:50 +0200
 
